--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ Projects/MathTest - Copy/.vs/MathTest/v16/.suo
 *.exe
 *.pdb
 Projects/MathTest/.vs/MathTest/v16/.suo
+Projects/NetworkTest/.vs/NetworkTest/v17/.suo
+Projects/NetworkTest/.vs/NetworkTest/v16/.suo
